--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 		background: #000030;
 		border: 2px solid #404040;
 		width: 100%;
-		 };
+		};
+		.canvas-layer {
+		}
 	</style>
   <meta charset="UTF-8" />
   <title>湯豆腐による作曲ツール</title>
 </head>
 <body>
 <div class="background">
-  要素
+<canvas class="canvas" id="canvas1"></canvas>
 </div>
