--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 		background: #000030;
 		border: 2px solid #404040;
 		width: 100%;
+		padding: 2px;
 		};
 		.canvas-layer {
+		position: relative;
+		
 		}
 	</style>
   <meta charset="UTF-8" />
