--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 		.background {
 		background: #000030;
 		border: 2px solid #404040;
-		width: 100%;
+		width: 600px;
 		padding: 2px;
 		};
 		.canvas-layer {
 		position: relative;
-		
 		}
 	</style>
   <meta charset="UTF-8" />
