--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		border: 2px solid #404040;
 		width: 600px;
 		padding: 2px;
+		background-position: center;
 		};
 		.canvas-layer {
 		position: relative;
