--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <head>
 <link rel="icon" href="favicon.ico" id="favicon">
 	<style>
+		.header {
+		position: relative;
+		background: #00003080;
+		border: 1px solid #ffffff;
+		width: 100%;
+		color: #ffffff;
+		}
 		.background {
 		background: #000030;
 		border: 2px solid #404040;
@@ -21,6 +28,9 @@
   <title>湯豆腐による作曲ツール</title>
 </head>
 <body>
+<div class="header">
+湯豆腐による作曲ツール
+</div>
 <div class="background">
 <canvas class="canvas" id="canvas1"></canvas>
 </div>
