--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		padding: 2px;
 		background-position: center;
 		};
-		.canvas-layer {
+		.canvas {
 		position: relative;
 		width: 800px;
 		height: 500px;
