--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		border: 1px solid #ffffff;
 		width: 100%;
 		color: #ffffff;
+		padding: 2px;
+		transition: 0.5s;
 		}
 		.background {
 		background: #000030;
