--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 		padding: 2px;
 		transition: 0.5s;
 		}
+		.title {
+		font-weight: bold;
+		font-size: 30px;
+		}
 		.background {
 		background: #000030;
 		border: 2px solid #404040;
