--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
 <link rel="icon" href="favicon.ico" id="favicon">
 	<style>
+		body {
+		font-family:"メイリオ", "Meiryo","ＭＳ ゴシック","Hiragino Kaku Gothic ProN","ヒラギノ角ゴ ProN W3",sans-serif; 
+		}
 		.header {
 		position: relative;
 		background: #00003080;
