--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 <div class="header">
-<p class="title">湯豆腐による作曲ツール</p>
+<div class="title">湯豆腐による作曲ツール</p>
 </div>
 <div class="background">
 <canvas class="canvas" id="canvas1"></canvas>
