--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
 <div class="background">
 <canvas class="canvas" id="canvas1"></canvas>
 </div>
-<script>
-
-</script>
+<script src="songmaker.js"></script>
 </body>
 </html>
