--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 
 <head>
-<link rel="icon" href="favicon.ico">
+<link rel="icon" href="favicon.ico" id="favicon">
 	<style>
 		body {
 		font-family:"メイリオ", "Meiryo","ＭＳ ゴシック","Hiragino Kaku Gothic ProN","ヒラギノ角ゴ ProN W3",sans-serif; 
