--- a/index.html
+++ b/index.html
@@ -32,15 +32,17 @@
 		}
 	</style>
   <meta charset="UTF-8" />
-  <title>湯豆腐による作曲ツール</title>
+  <title>音響再生テスト</title>
 </head>
 <body>
 <div class="header">
 <div class="title">湯豆腐による作曲ツール</div>
 </div>
 <div class="background">
-<canvas class="canvas" id="canvas1"></canvas>
 </div>
-<script src="songmaker.js"></script>
+<script>
+	"use strict";
+	
+</script>
 </body>
 </html>
