--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
 	window.AudioContext = window.AudioContext||window.webkitAudioContext;
 	var audioCtx = new AudioContext();
 	function play(hz) {
-		var o = audioCtx.create0scillator();
+		var o = audioCtx.createOscillator();
 		o.frequency.value = hz;
 		var audDes = audioCtx.destination;
-		osc.start = osc.start || osc.note0n;
-		osc.start();
+		o.start = o.start || o.noteOn;
+		o.start();
 		setTimeout(function() {
-			osc.stop(0);
+			o.stop(0);
 		}, 200);
 	}
 	addEventListener("keydown",function(e) {
