--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 	}
 	addEventListener("keydown",function(e) {
 		if (e.key == "s") {
-		play(440);
+			console.log("play");
+			play(440);
 		};
 	});
 	
